[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Welcome.gd" type="Script" id=1]
[ext_resource path="res://fonts/SF Atarian System.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://images/Game Off 2018.png" type="Texture" id=3]
[ext_resource path="res://fonts/SF Atarian System Bold.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]

size = 120
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

size = 32
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]

size = 32
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]

size = 36
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )

[node name="Welcome" type="PanelContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 768.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 761.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1263.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "The Hybridiser"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="Panel"]
position = Vector2( 633, 263 )
texture = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 173.0
margin_top = 423.0
margin_right = 1063.0
margin_bottom = 643.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/bold_font = SubResource( 2 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "A game created for Game Off 2018
Copyright (c) 2018 Pete Goodwin
"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "A game created for Game Off 2018
Copyright (c) 2018 Pete Goodwin
"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false

[node name="StartButton" type="Button" parent="Panel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 363.0
margin_top = 683.0
margin_right = 520.0
margin_bottom = 725.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start"
flat = false
align = 1

[node name="HelpButton" type="Button" parent="Panel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 543.0
margin_top = 683.0
margin_right = 700.0
margin_bottom = 725.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Instructions"
flat = false
align = 1

[node name="CreditsButton" type="Button" parent="Panel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 723.0
margin_top = 683.0
margin_right = 880.0
margin_bottom = 725.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Credits"
flat = false
align = 1

[connection signal="pressed" from="Panel/StartButton" to="." method="on_start_pressed"]
[connection signal="pressed" from="Panel/HelpButton" to="." method="on_help_pressed"]
[connection signal="pressed" from="Panel/CreditsButton" to="." method="on_credits_pressed"]
